# boardcaster-hardware

./: .gitignore  Arduino.mk  README  pieceScanner.c  wishield_pins.txt
DecMux/: DecMux.pde
PieceScanner/: config.h  pieceScanner.pde
boardcaster/: Makefile  MemoryFree.cpp  MemoryFree.h  bitboard_ops.cpp  bitboard_ops.h  boardcaster.h  boardcaster.pde  config.h  defines.h  hw_signals.cpp  hw_signals.h  led_disp.cpp  led_disp.h  piece_detector.cpp  piece_detector.h  poster.cpp  poster.h  poster.pde  utils.cpp  utils.h
boardcaster/WiShield/: WiServer.cpp  WiServer.h  request.cpp  spi.h  strings.c
boardcaster/posterNotWorking/: poster.h  poster.pde
chess-engine/: CMakeLists.txt  main.c
chess-engine/chess_engine_arduino/: bitboard.c  bitboard.h  chess_engine_arduino.pde
chess-engine/include/: CMakeLists.txt  trans.h
chess-engine/src/: move.c
chess_arduino/: chess_arduino.pde
chess_arduino/Chess/: Chess.cpp  Chess.h  attack.c  attack.cpp  attack.h  bitboard.c  bitboard.h  fen.cpp  fen.h  move.c  move.cpp  move.h  position.cpp
chess_arduino/not_in_use/: diag.c  diag.h
cycler/: Makefile  bitboard_ops.cpp  bitboard_ops.h  boardcaster.h  cycler.pde  defines.h  hw_signals.cpp  led_disp.cpp  led_disp.h  piece_detector.cpp  piece_detector.h  utils.cpp  utils.h
hardware/pcb/: boardcaster_pcb.brd  boardcaster_pcb.sch
pieceScanner/: Makefile  config.h  pieceScanner.pde
poster/: SimpleClient.pde
shiftout/: Makefile  shiftout.pde  shiftout.pde~
src/: main.c
src/include/: move.h
testertemp/: testertemp.h  testertemp.pde
(+1 files in other folders)
