add_library(ChessLib "${PROJECT_SOURCE_DIR}/src/bitboard.c" "${PROJECT_SOURCE_DIR}/src/diag.c" "${PROJECT_SOURCE_DIR}/src/fen.c" "${PROJECT_SOURCE_DIR}/src/position.c" "${PROJECT_SOURCE_DIR}/src/trans.c" "${PROJECT_SOURCE_DIR}/src/eval.c" "${PROJECT_SOURCE_DIR}/src/move.c" "${PROJECT_SOURCE_DIR}/src/search.c")

